--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: "3.8"
 services:
   nginx:
     build:
-      context: .
-      dockerfile: ./infrastructure/services/nginx/Dockerfile
+      context: ""
+      dockerfile: services/nginx/Dockerfile
     env_file:
-      - .env
+      - infrastructure/.env
     networks:
-      - main-network
+      - follow-up-network
     volumes:
       - ./public:/var/www/html/public
       - ./storage/app/public:/var/www/html/storage/app/public
       - //var/run/docker.sock:/var/run/docker.sock
     extra_hosts:
-      - laravel.local:127.0.0.1
+      - follow-up.local:127.0.0.1
     ports:
       - ${NGINX_PORT_EXPORT:-80}:80
       - 443:443
@@ -23,21 +23,21 @@ services:
 
   fpm:
     build:
-      context: .
-      dockerfile: ./infrastructure/services/fpm/Dockerfile
+      context: ""
+      dockerfile: services/fpm/Dockerfile
     volumes:
       - ./:/var/www/html
     networks:
-      - main-network
+      - follow-up-network
     depends_on:
       - postgres
 
   queue:
     build:
-      context: .
-      dockerfile: infrastructure/services/queue/Dockerfile
+      context: ""
+      dockerfile: services/queue/Dockerfile
     networks:
-      - main-network
+      - follow-up-network
     volumes:
       - ./:/var/www/html
     depends_on:
@@ -46,25 +46,25 @@ services:
 
   postgres:
     build:
-      context: .
-      dockerfile: infrastructure/services/postgres/Dockerfile
+      context: ""
+      dockerfile: services/postgres/Dockerfile
     env_file:
-      - .env
+      - infrastructure/.env
     environment:
-      - "POSTGRES_DB=${DB_DATABASE:-main_db}"
-      - "POSTGRES_USER=${DB_USERNAME:-main_user}"
-      - "POSTGRES_PASSWORD=${DB_PASSWORD:-main_p@ss}"
+      - "POSTGRES_DB=${DB_DATABASE:-follow_up_db}"
+      - "POSTGRES_USER=${DB_USERNAME:-follow_up_user}"
+      - "POSTGRES_PASSWORD=${DB_PASSWORD:-follow_up_p@ss}"
     networks:
-      - main-network
+      - follow-up-network
     volumes:
-      - postgres_volume:/var/lib/postgresql/data
+      - follow-up-volume:/var/lib/postgresql/data
     ports:
       - ${DB_PORT_EXPORT:-5432}:5432
 
 networks:
-  main-network:
+  follow-up-network:
     driver: overlay
 
 volumes:
-  postgres_volume:
+  follow-up-volume:
     external: true
