nginx container updated

--- a/infrastructure/conf/nginx-service.conf
+++ b/infrastructure/conf/nginx-service.conf
@@ -1,7 +1,7 @@
 server {
      listen   80; ## listen for ipv4; this line is default and implied
 
-     server_name  main_web_server;
+     server_name  follow_up_web_server;
 
      access_log /dev/stdout;
      error_log /dev/stdout;
@@ -24,7 +24,7 @@ server {
      # delegate all php scripts to fpm
      location ~ [^/]\.php(/|$) {
          fastcgi_split_path_info ^(.+\.php)(/.+)$;
-         fastcgi_pass            localhost:9000;
+         fastcgi_pass            fpm:9000;
          fastcgi_index           index.php;
          include                 fastcgi_params;
          fastcgi_param           REQUEST_METHOD  $request_method;
